--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -49,7 +49,7 @@
                                         <textarea class="form-control" rows="5" id="comment" disabled></textarea>
                                       </div>
 
-                                      <button class="btn btn-success" (click)="ngOnInit()" type="submit"> Send </button>
+                                      <button class="btn btn-success" (click)="getInfo()" type="submit"> Send </button>
                             </form>
                         </div>
 
