genToken API start

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="wrap">
       <div class="footer__bar">
-          <div class="footer__copy">
+          <div class="footer__copy footer_align">
               &copy; Copyright © 2019 Oceaneering International, Inc
           </div>
       </div>
