--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,108 +8,107 @@
     </div>
 </div>
 <div class="categories">
-<div class="wrap">
-    <div class="categories__list">
-        <a routerLink="/info" class="categories__item categories__item_getting_started">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-info-circle"></i></span>
-                <span class="categories__name">Info API</span>
-                <span class="categories__desc">Get the details about the elasticsearch service you're
-                    using</span>
-            </span>
-        </a>
-        <a href="components/token/generatetoken.html" class="categories__item categories__item_components">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-id-card-o"></i></span>
-                <span class="categories__name">Generate Token API</span>
-                <span class="categories__desc">Get the JWT token generated in seconds using this
-                    API</span>
-            </span>
-        </a>
-        <a href="components/token/revoketoken.html" class="categories__item categories__item_references">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-times"></i></span>
-                <span class="categories__name">Revoke Token API</span>
-                <span class="categories__desc">Get the JWT token generated in seconds using this
-                    API</span>
-            </span>
-        </a>
-        <a href="guides/index.html" class="categories__item categories__item_guides">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-object-group"></i></span>
-                <span class="categories__name">Update Mappings API</span>
-                <span class="categories__desc">Guide to understand process of defining how a document,
-                    and the fields it contains, are stored and indexed</span>
-            </span>
-        </a>
-        <a href="components/search/search.html"
-            class="categories__item categories__item_getting_started">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-search"></i></span>
-                <span class="categories__name">Search API</span>
-                <span class="categories__desc">Query elasticsearch for particular search with particular
-                    search specifications</span>
-            </span>
-        </a>
-        <a href="guides/index.html" class="categories__item categories__item_components">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-ravelry"></i></span>
-                <span class="categories__name">MSearch API</span>
-                <span class="categories__desc">Query elasticsearch to perform multiple searches on the
-                    same or the different indexes</span>
-            </span>
-        </a>
+    <div class="wrap">
+        <div class="categories__list">
+            <a routerLink="/info" class="categories__item categories__item_getting_started">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-info-circle"></i></span>
+                    <span class="categories__name">Info API</span>
+                    <span class="categories__desc">Get the details about the elasticsearch service you're
+                        using</span>
+                </span>
+            </a>
+            <a routerLink="/generatetoken" class="categories__item categories__item_components">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-id-card-o"></i></span>
+                    <span class="categories__name">Generate Token API</span>
+                    <span class="categories__desc">Get the JWT token generated in seconds using this
+                        API</span>
+                </span>
+            </a>
+            <a href="components/token/revoketoken.html" class="categories__item categories__item_references">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-times"></i></span>
+                    <span class="categories__name">Revoke Token API</span>
+                    <span class="categories__desc">Get the JWT token generated in seconds using this
+                        API</span>
+                </span>
+            </a>
+            <a href="guides/index.html" class="categories__item categories__item_guides">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-object-group"></i></span>
+                    <span class="categories__name">Update Mappings API</span>
+                    <span class="categories__desc">Guide to understand process of defining how a document,
+                        and the fields it contains, are stored and indexed</span>
+                </span>
+            </a>
+            <a href="components/search/search.html" class="categories__item categories__item_getting_started">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-search"></i></span>
+                    <span class="categories__name">Search API</span>
+                    <span class="categories__desc">Query elasticsearch for particular search with particular
+                        search specifications</span>
+                </span>
+            </a>
+            <a href="guides/index.html" class="categories__item categories__item_components">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-ravelry"></i></span>
+                    <span class="categories__name">MSearch API</span>
+                    <span class="categories__desc">Query elasticsearch to perform multiple searches on the
+                        same or the different indexes</span>
+                </span>
+            </a>
 
-        <a href="components/index.html" class="categories__item categories__item_references">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-mercury"></i></span>
-                <span class="categories__name">Fetch API</span>
-                <span class="categories__desc">Fetch the specific document by providing document id as
-                    parameter </span>
-            </span>
-        </a>
-        <a href="components/index.html" class="categories__item categories__item_guides">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-audio-description"></i></span>
-                <span class="categories__name">Autocomplete API</span>
-                <span class="categories__desc">Fetch the most relevant Autocomplete suggestions for your
-                    search</span>
-            </span>
-        </a>
-        <a href="components/index.html" class="categories__item categories__item_getting_started">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-history"></i></span>
-                <span class="categories__name">Recent Search API</span>
-                <span class="categories__desc">Fetch the most relevant Autocomplete suggestions for your
-                    search</span>
-            </span>
-        </a>
-        <a href="components/index.html" class="categories__item categories__item_components">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-thumbs-o-up"></i></span>
-                <span class="categories__name">Top Search API</span>
-                <span class="categories__desc">Fetch the most relevant Autocomplete suggestions for your
-                    search</span>
-            </span>
-        </a>
-        <a href="references/index.html" class="categories__item categories__item_references">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-book"></i></span>
-                <span class="categories__name">References</span>
-                <span class="categories__desc">Component structure references, classes and JSON
-                    Schema</span>
-            </span>
-        </a>
-        <a href="references/index.html" class="categories__item categories__item_guides">
-            <span class="categories__inner">
-                <span class="categories__icon"><i class="fa fa-book"></i></span>
-                <span class="categories__name">References</span>
-                <span class="categories__desc">Component structure references, classes and JSON
-                    Schema</span>
-            </span>
-        </a>
+            <a href="components/index.html" class="categories__item categories__item_references">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-mercury"></i></span>
+                    <span class="categories__name">Fetch API</span>
+                    <span class="categories__desc">Fetch the specific document by providing document id as
+                        parameter </span>
+                </span>
+            </a>
+            <a href="components/index.html" class="categories__item categories__item_guides">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-audio-description"></i></span>
+                    <span class="categories__name">Autocomplete API</span>
+                    <span class="categories__desc">Fetch the most relevant Autocomplete suggestions for your
+                        search</span>
+                </span>
+            </a>
+            <a href="components/index.html" class="categories__item categories__item_getting_started">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-history"></i></span>
+                    <span class="categories__name">Recent Search API</span>
+                    <span class="categories__desc">Fetch the most relevant Autocomplete suggestions for your
+                        search</span>
+                </span>
+            </a>
+            <a href="components/index.html" class="categories__item categories__item_components">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-thumbs-o-up"></i></span>
+                    <span class="categories__name">Top Search API</span>
+                    <span class="categories__desc">Fetch the most relevant Autocomplete suggestions for your
+                        search</span>
+                </span>
+            </a>
+            <a href="references/index.html" class="categories__item categories__item_references">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-book"></i></span>
+                    <span class="categories__name">References</span>
+                    <span class="categories__desc">Component structure references, classes and JSON
+                        Schema</span>
+                </span>
+            </a>
+            <a href="references/index.html" class="categories__item categories__item_guides">
+                <span class="categories__inner">
+                    <span class="categories__icon"><i class="fa fa-book"></i></span>
+                    <span class="categories__name">References</span>
+                    <span class="categories__desc">Component structure references, classes and JSON
+                        Schema</span>
+                </span>
+            </a>
+        </div>
     </div>
-</div>
 </div>
 <hr>
 <!--<div class="link-box">
@@ -168,10 +167,9 @@
 </div>
 </div>-->
 <div class="question">
-<div class="question__tit">Didn’t find what you were looking for?</div>
-<div class="buttons">
-    <a href="mailto:skashyap@oceaneering.com" class="button">Contact Support</a>
-</div>
+    <div class="question__tit">Didn’t find what you were looking for?</div>
+    <div class="buttons">
+        <a href="mailto:skashyap@oceaneering.com" class="button">Contact Support</a>
+    </div>
 </div>
 <div class="footer__spacer"></div>
-
