--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,8 +1,8 @@
 <div class="layout">
     <div class="wrap">
         <div class="breadcrumbs">
-            <a href="../../index.html" class="breadcrumbs__item">Home</a>
-            <a href="info.html" class="breadcrumbs__item">Components</a>
+            <a routerLink="/home" class="breadcrumbs__item">Home</a>
+            <a routerLink="/info" class="breadcrumbs__item">Components</a>
             <span class="breadcrumbs__item">ES INFO</span>
         </div>
         <div class="layout__side">
