all routes defined

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
                         API</span>
                 </span>
             </a>
-            <a href="components/token/revoketoken.html" class="categories__item categories__item_references">
+            <a routerLink="/revoketoken" class="categories__item categories__item_references">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-times"></i></span>
                     <span class="categories__name">Revoke Token API</span>
@@ -34,7 +34,7 @@
                         API</span>
                 </span>
             </a>
-            <a href="guides/index.html" class="categories__item categories__item_guides">
+            <a routerLink="/updatemappings" class="categories__item categories__item_guides">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-object-group"></i></span>
                     <span class="categories__name">Update Mappings API</span>
@@ -42,7 +42,7 @@
                         and the fields it contains, are stored and indexed</span>
                 </span>
             </a>
-            <a href="components/search/search.html" class="categories__item categories__item_getting_started">
+            <a routerLink="/search" class="categories__item categories__item_getting_started">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-search"></i></span>
                     <span class="categories__name">Search API</span>
@@ -50,7 +50,7 @@
                         search specifications</span>
                 </span>
             </a>
-            <a href="guides/index.html" class="categories__item categories__item_components">
+            <a routerLink="/msearch" class="categories__item categories__item_components">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-ravelry"></i></span>
                     <span class="categories__name">MSearch API</span>
@@ -59,7 +59,7 @@
                 </span>
             </a>
 
-            <a href="components/index.html" class="categories__item categories__item_references">
+            <a routerLink="/fetchbyid" class="categories__item categories__item_references">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-mercury"></i></span>
                     <span class="categories__name">Fetch API</span>
@@ -67,7 +67,7 @@
                         parameter </span>
                 </span>
             </a>
-            <a href="components/index.html" class="categories__item categories__item_guides">
+            <a routerLink="/autocomplete" class="categories__item categories__item_guides">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-audio-description"></i></span>
                     <span class="categories__name">Autocomplete API</span>
@@ -75,7 +75,7 @@
                         search</span>
                 </span>
             </a>
-            <a href="components/index.html" class="categories__item categories__item_getting_started">
+            <a routerLink="/recentsearch" class="categories__item categories__item_getting_started">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-history"></i></span>
                     <span class="categories__name">Recent Search API</span>
@@ -83,7 +83,7 @@
                         search</span>
                 </span>
             </a>
-            <a href="components/index.html" class="categories__item categories__item_components">
+            <a routerLink="/topsearch" class="categories__item categories__item_components">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-thumbs-o-up"></i></span>
                     <span class="categories__name">Top Search API</span>
@@ -91,7 +91,7 @@
                         search</span>
                 </span>
             </a>
-            <a href="references/index.html" class="categories__item categories__item_references">
+            <a routerLink="/home" class="categories__item categories__item_references">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-book"></i></span>
                     <span class="categories__name">References</span>
@@ -99,7 +99,7 @@
                         Schema</span>
                 </span>
             </a>
-            <a href="references/index.html" class="categories__item categories__item_guides">
+            <a routerLink="/home" class="categories__item categories__item_guides">
                 <span class="categories__inner">
                     <span class="categories__icon"><i class="fa fa-book"></i></span>
                     <span class="categories__name">References</span>
