--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -58,7 +58,7 @@
                 </p>
                 <div class="highlighter-rouge">
                     <div class="highlight">
-                        <ngx-json-viewer [json]="jsonObject"></ngx-json-viewer>
+                        <ngx-json-viewer [json]="infoSuccess"></ngx-json-viewer>
 
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                 </p>
                 <div class="highlighter-rouge">
                     <div class="highlight">
-                        <ngx-json-viewer [json]="jsonObject1"></ngx-json-viewer>
+                        <ngx-json-viewer [json]="infoError"></ngx-json-viewer>
                     </div>
                 </div>
             </div>
