--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -21,7 +21,7 @@
                     <code class="highlighter-rouge">info</code> API provides general information about Build Model,
                     Licencing Information and feature information of
                     installed elasticsearch
-                    <a href="https://eswrapper.oii.oceaneering.com/info" target="_blank">
+                    <a href="https://eswdev.oii.oceaneering.com/info" target="_blank">
                         <code class="highlighter-rouge">version</code>
                     </a>.</p>
                 <h2 id="description">Description</h2>
