--- a/src/app/tryit/tryit.component.html
+++ b/src/app/tryit/tryit.component.html
@@ -2,7 +2,7 @@
     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#demo"> Try it
         out </button>
     <div id="demo" class="collapse custom-collapse">
-        <form method="GET">
+        <form [formGroup]="reqForm" >
             <div class="form-group">
                 <label for="sel1">Server</label>
                 <input type="text" class="form-control" value={{apiURL}} id="server" disabled>
@@ -14,12 +14,12 @@
             <div class="form-group">
                 <label for="sel2">Endpoint</label>
                 <input type="text" value={{endpoint}} class="form-control" id="end" disabled>
+            </div>            
+            <div *ngIf="method != 'GET'" class="form-group">
+                <label >Request</label>
+                <textarea formControlName="reqbody" class="form-control" rows="5" id="comment" ></textarea>
             </div>
-            <div *ngIf="!fetchServerDetails() === GET" class="form-group">
-                <label for="comment">Request</label>
-                <textarea class="form-control" rows="5" id="comment" disabled></textarea>
-            </div>
-            <button class="btn btn-success" type="button" (click)="getInfo()"> Send </button>
+            <button class="btn btn-success" type="submit" (click)="getInfo()"> Send </button>
         </form>
     </div>
     <div *ngIf="response != undefined" id="resp" class="mt-1">
