--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -40,10 +40,8 @@
                     </li>
                 </ul>
                 <h2 id="token">Using INFO</h2>
-                <p>A
-                    <a href="#">
-                        <code class="highlighter-rouge">GET</code>
-                    </a> request that can be exposed through Web Browsers as well as from REST clients. Similarly to
+                <p>A <code class="highlighter-rouge">GET</code>
+                     request that can be exposed through Web Browsers as well as from REST clients. Similarly to
                     elasticsearch
                     default context,the endpoint
                     <a href="https://eswdev.oii.oceaneering.com/info" target="_blank">
